# orche

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cli-reference.md  index.md  installation.md  quickstart.md
docs/api/: builtin.md  command-registry.md  exceptions.md  stack.md
docs/guides/: hooks.md  plugins.md  services.md
orche/: __init__.py  builtin.py  cli.py  docker.py  exceptions.py  logger.py  stack.py
tests/: conftest.py  test_builtin.py  test_cli.py  test_command_registry.py  test_docker.py  test_exceptions.py  test_logger.py  test_stack.py
whaler/: __init__.py  builtin.py  cli.py  logger.py  stack.py  tui.py
