[project]
name = "orche"
version = "0.4.4"
description = "A simple, lightweight Python orchestrator for Docker Compose stacks"
authors = [
    {name = "Pietro Agazzi", email = "pietro.agazzi@prconsulting.eu"}
]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4"
keywords = ["docker", "docker-compose", "orchestration", "devops", "containers"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Typing :: Typed",
]
dependencies = [
    "python-on-whales>=0.80.0,<1.0.0",
    "rich>=13.0.0",
    "PyYAML>=6.0",
    "GitPython>=3.1.0",
    "click>=8.1.0",
]

[project.urls]
Homepage = "https://github.com/pietroagazzi/orche"
Repository = "https://github.com/pietroagazzi/orche"
Documentation = "https://pietroagazzi.github.io/orche"
Issues = "https://github.com/pietroagazzi/orche/issues"

[project.scripts]
orche = "orche.cli:main"

[project.optional-dependencies]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.25.0",
]
dev = [
    "pytest>=9.0.3",
    "pytest-timeout>=2.3.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "types-PyYAML>=6.0",
    "types-pygments>=2.19.0",
    "pre-commit>=4.0.0",
]

[tool.poetry]
packages = [{include = "orche"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --timeout=300"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
files = ["orche", "tests"]
